# check-my-setup

./: Cargo.toml
example/: setup-local-dir.json  simple-setup-dir.json  simple-setup-file.json
example/a/: thing
src/: main.rs
