[package]
name = "check-my-setup"
version = "0.1.0"
authors = ["Kenneth Tubman V <tubofpower@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
path-absolutize = "1.2.0"